--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
     "@types/node": "^14.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "axios": "^1.4.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "react-social-login-buttons": "^3.9.1",
+    "reactjs-social-login": "^2.6.2",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
